parser.output
Terminals unused in grammar

   TDOT
   TCOMMENT
   TCOLON
   NEG


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt
    3      | stmts stmt

    4 block: TLBRACE stmts TRBRACE

    5 ifblock: TIF TLPAREN expression TRPAREN block
    6        | TIF TLPAREN expression TRPAREN block elseblock
    7        | TIF TLPAREN expression TRPAREN block elifblocks elseblock
    8        | TIF TLPAREN expression TRPAREN block elifblocks

    9 elifblock: TELIF TLPAREN expression TRPAREN block

   10 elifblocks: elifblock
   11           | elifblocks elifblock

   12 elseblock: TELSE block

   13 loopblock: TLOOP TLPAREN expression TRPAREN block
   14          | TLOOP TLPAREN stmt stmt expression TRPAREN block

   15 arg: TIDENTIFIER

   16 arglist: arg
   17        | arglist TCOMMA arg

   18 call: expression

   19 calllist: call
   20         | calllist TCOMMA call

   21 funcdecl: TFUNC TLPAREN arglist TRPAREN block
   22         | TFUNC TLPAREN TRPAREN block

   23 stmt: expression TSEMI
   24     | loopblock
   25     | ifblock

   26 expression: TINTEGER
   27           | TFLOAT
   28           | TSTRING
   29           | TIDENTIFIER
   30           | expression TPLUS expression
   31           | expression TMINUS expression
   32           | expression TMUL expression
   33           | expression TDIV expression
   34           | expression TMOD expression
   35           | expression TPOW expression
   36           | expression TCEQ expression
   37           | expression TCNE expression
   38           | expression TCLT expression
   39           | expression TCLE expression
   40           | expression TCGT expression
   41           | expression TCGE expression
   42           | expression TOR expression
   43           | expression TAND expression
   44           | TLPAREN expression TRPAREN
   45           | TIDENTIFIER TEQUAL expression
   46           | expression TLPAREN calllist TRPAREN
   47           | expression TLPAREN TRPAREN
   48           | funcdecl
   49           | TPRT expression
   50           | TNOT expression


Terminals, with rules where they appear

$end (0) 0
error (256)
TIDENTIFIER (258) 15 29 45
TINTEGER (259) 26
TFLOAT (260) 27
TSTRING (261) 28
TCEQ (262) 36
TCNE (263) 37
TCLT (264) 38
TCLE (265) 39
TCGT (266) 40
TCGE (267) 41
TEQUAL (268) 45
TAND (269) 43
TOR (270) 42
TNOT (271) 50
TLPAREN (272) 5 6 7 8 9 13 14 21 22 44 46 47
TRPAREN (273) 5 6 7 8 9 13 14 21 22 44 46 47
TLBRACE (274) 4
TRBRACE (275) 4
TCOMMA (276) 17 20
TDOT (277)
TPLUS (278) 30
TMINUS (279) 31
TMUL (280) 32
TDIV (281) 33
TMOD (282) 34
TPOW (283) 35
TIF (284) 5 6 7 8
TELIF (285) 9
TELSE (286) 12
TPRT (287) 49
TCOMMENT (288)
TLOOP (289) 13 14
TCOLON (290)
TFUNC (291) 21 22
TSEMI (292) 23
NEG (293)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
program (40)
    on left: 1, on right: 0
stmts (41)
    on left: 2 3, on right: 1 3 4
block (42)
    on left: 4, on right: 5 6 7 8 9 12 13 14 21 22
ifblock (43)
    on left: 5 6 7 8, on right: 25
elifblock (44)
    on left: 9, on right: 10 11
elifblocks (45)
    on left: 10 11, on right: 7 8 11
elseblock (46)
    on left: 12, on right: 6 7
loopblock (47)
    on left: 13 14, on right: 24
arg (48)
    on left: 15, on right: 16 17
arglist (49)
    on left: 16 17, on right: 17 21
call (50)
    on left: 18, on right: 19 20
calllist (51)
    on left: 19 20, on right: 20 46
funcdecl (52)
    on left: 21 22, on right: 48
stmt (53)
    on left: 23 24 25, on right: 2 3 14
expression (54)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50, on right: 5 6 7 8 9 13 14 18 23 30 31 32
    33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 49 50


State 0

    0 $accept: . program $end

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TIF          shift, and go to state 7
    TPRT         shift, and go to state 8
    TLOOP        shift, and go to state 9
    TFUNC        shift, and go to state 10

    program     go to state 11
    stmts       go to state 12
    ifblock     go to state 13
    loopblock   go to state 14
    funcdecl    go to state 15
    stmt        go to state 16
    expression  go to state 17


State 1

   29 expression: TIDENTIFIER .
   45           | TIDENTIFIER . TEQUAL expression

    TEQUAL  shift, and go to state 18

    $default  reduce using rule 29 (expression)


State 2

   26 expression: TINTEGER .

    $default  reduce using rule 26 (expression)


State 3

   27 expression: TFLOAT .

    $default  reduce using rule 27 (expression)


State 4

   28 expression: TSTRING .

    $default  reduce using rule 28 (expression)


State 5

   50 expression: TNOT . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 19


State 6

   44 expression: TLPAREN . expression TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 20


State 7

    5 ifblock: TIF . TLPAREN expression TRPAREN block
    6        | TIF . TLPAREN expression TRPAREN block elseblock
    7        | TIF . TLPAREN expression TRPAREN block elifblocks elseblock
    8        | TIF . TLPAREN expression TRPAREN block elifblocks

    TLPAREN  shift, and go to state 21


State 8

   49 expression: TPRT . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 22


State 9

   13 loopblock: TLOOP . TLPAREN expression TRPAREN block
   14          | TLOOP . TLPAREN stmt stmt expression TRPAREN block

    TLPAREN  shift, and go to state 23


State 10

   21 funcdecl: TFUNC . TLPAREN arglist TRPAREN block
   22         | TFUNC . TLPAREN TRPAREN block

    TLPAREN  shift, and go to state 24


State 11

    0 $accept: program . $end

    $end  shift, and go to state 25


State 12

    1 program: stmts .
    3 stmts: stmts . stmt

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TIF          shift, and go to state 7
    TPRT         shift, and go to state 8
    TLOOP        shift, and go to state 9
    TFUNC        shift, and go to state 10

    $default  reduce using rule 1 (program)

    ifblock     go to state 13
    loopblock   go to state 14
    funcdecl    go to state 15
    stmt        go to state 26
    expression  go to state 17


State 13

   25 stmt: ifblock .

    $default  reduce using rule 25 (stmt)


State 14

   24 stmt: loopblock .

    $default  reduce using rule 24 (stmt)


State 15

   48 expression: funcdecl .

    $default  reduce using rule 48 (expression)


State 16

    2 stmts: stmt .

    $default  reduce using rule 2 (stmts)


State 17

   23 stmt: expression . TSEMI
   30 expression: expression . TPLUS expression
   31           | expression . TMINUS expression
   32           | expression . TMUL expression
   33           | expression . TDIV expression
   34           | expression . TMOD expression
   35           | expression . TPOW expression
   36           | expression . TCEQ expression
   37           | expression . TCNE expression
   38           | expression . TCLT expression
   39           | expression . TCLE expression
   40           | expression . TCGT expression
   41           | expression . TCGE expression
   42           | expression . TOR expression
   43           | expression . TAND expression
   46           | expression . TLPAREN calllist TRPAREN
   47           | expression . TLPAREN TRPAREN

    TCEQ     shift, and go to state 27
    TCNE     shift, and go to state 28
    TCLT     shift, and go to state 29
    TCLE     shift, and go to state 30
    TCGT     shift, and go to state 31
    TCGE     shift, and go to state 32
    TAND     shift, and go to state 33
    TOR      shift, and go to state 34
    TLPAREN  shift, and go to state 35
    TPLUS    shift, and go to state 36
    TMINUS   shift, and go to state 37
    TMUL     shift, and go to state 38
    TDIV     shift, and go to state 39
    TMOD     shift, and go to state 40
    TPOW     shift, and go to state 41
    TSEMI    shift, and go to state 42


State 18

   45 expression: TIDENTIFIER TEQUAL . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 43


State 19

   30 expression: expression . TPLUS expression
   31           | expression . TMINUS expression
   32           | expression . TMUL expression
   33           | expression . TDIV expression
   34           | expression . TMOD expression
   35           | expression . TPOW expression
   36           | expression . TCEQ expression
   37           | expression . TCNE expression
   38           | expression . TCLT expression
   39           | expression . TCLE expression
   40           | expression . TCGT expression
   41           | expression . TCGE expression
   42           | expression . TOR expression
   43           | expression . TAND expression
   46           | expression . TLPAREN calllist TRPAREN
   47           | expression . TLPAREN TRPAREN
   50           | TNOT expression .

    TLPAREN  shift, and go to state 35

    $default  reduce using rule 50 (expression)


State 20

   30 expression: expression . TPLUS expression
   31           | expression . TMINUS expression
   32           | expression . TMUL expression
   33           | expression . TDIV expression
   34           | expression . TMOD expression
   35           | expression . TPOW expression
   36           | expression . TCEQ expression
   37           | expression . TCNE expression
   38           | expression . TCLT expression
   39           | expression . TCLE expression
   40           | expression . TCGT expression
   41           | expression . TCGE expression
   42           | expression . TOR expression
   43           | expression . TAND expression
   44           | TLPAREN expression . TRPAREN
   46           | expression . TLPAREN calllist TRPAREN
   47           | expression . TLPAREN TRPAREN

    TCEQ     shift, and go to state 27
    TCNE     shift, and go to state 28
    TCLT     shift, and go to state 29
    TCLE     shift, and go to state 30
    TCGT     shift, and go to state 31
    TCGE     shift, and go to state 32
    TAND     shift, and go to state 33
    TOR      shift, and go to state 34
    TLPAREN  shift, and go to state 35
    TRPAREN  shift, and go to state 44
    TPLUS    shift, and go to state 36
    TMINUS   shift, and go to state 37
    TMUL     shift, and go to state 38
    TDIV     shift, and go to state 39
    TMOD     shift, and go to state 40
    TPOW     shift, and go to state 41


State 21

    5 ifblock: TIF TLPAREN . expression TRPAREN block
    6        | TIF TLPAREN . expression TRPAREN block elseblock
    7        | TIF TLPAREN . expression TRPAREN block elifblocks elseblock
    8        | TIF TLPAREN . expression TRPAREN block elifblocks

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 45


State 22

   30 expression: expression . TPLUS expression
   31           | expression . TMINUS expression
   32           | expression . TMUL expression
   33           | expression . TDIV expression
   34           | expression . TMOD expression
   35           | expression . TPOW expression
   36           | expression . TCEQ expression
   37           | expression . TCNE expression
   38           | expression . TCLT expression
   39           | expression . TCLE expression
   40           | expression . TCGT expression
   41           | expression . TCGE expression
   42           | expression . TOR expression
   43           | expression . TAND expression
   46           | expression . TLPAREN calllist TRPAREN
   47           | expression . TLPAREN TRPAREN
   49           | TPRT expression .

    TCEQ     shift, and go to state 27
    TCNE     shift, and go to state 28
    TCLT     shift, and go to state 29
    TCLE     shift, and go to state 30
    TCGT     shift, and go to state 31
    TCGE     shift, and go to state 32
    TAND     shift, and go to state 33
    TOR      shift, and go to state 34
    TLPAREN  shift, and go to state 35
    TPLUS    shift, and go to state 36
    TMINUS   shift, and go to state 37
    TMUL     shift, and go to state 38
    TDIV     shift, and go to state 39
    TMOD     shift, and go to state 40
    TPOW     shift, and go to state 41

    $default  reduce using rule 49 (expression)


State 23

   13 loopblock: TLOOP TLPAREN . expression TRPAREN block
   14          | TLOOP TLPAREN . stmt stmt expression TRPAREN block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TIF          shift, and go to state 7
    TPRT         shift, and go to state 8
    TLOOP        shift, and go to state 9
    TFUNC        shift, and go to state 10

    ifblock     go to state 13
    loopblock   go to state 14
    funcdecl    go to state 15
    stmt        go to state 46
    expression  go to state 47


State 24

   21 funcdecl: TFUNC TLPAREN . arglist TRPAREN block
   22         | TFUNC TLPAREN . TRPAREN block

    TIDENTIFIER  shift, and go to state 48
    TRPAREN      shift, and go to state 49

    arg      go to state 50
    arglist  go to state 51


State 25

    0 $accept: program $end .

    $default  accept


State 26

    3 stmts: stmts stmt .

    $default  reduce using rule 3 (stmts)


State 27

   36 expression: expression TCEQ . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 52


State 28

   37 expression: expression TCNE . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 53


State 29

   38 expression: expression TCLT . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 54


State 30

   39 expression: expression TCLE . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 55


State 31

   40 expression: expression TCGT . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 56


State 32

   41 expression: expression TCGE . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 57


State 33

   43 expression: expression TAND . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 58


State 34

   42 expression: expression TOR . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 59


State 35

   46 expression: expression TLPAREN . calllist TRPAREN
   47           | expression TLPAREN . TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TRPAREN      shift, and go to state 60
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    call        go to state 61
    calllist    go to state 62
    funcdecl    go to state 15
    expression  go to state 63


State 36

   30 expression: expression TPLUS . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 64


State 37

   31 expression: expression TMINUS . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 65


State 38

   32 expression: expression TMUL . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 66


State 39

   33 expression: expression TDIV . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 67


State 40

   34 expression: expression TMOD . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 68


State 41

   35 expression: expression TPOW . expression

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TPRT         shift, and go to state 8
    TFUNC        shift, and go to state 10

    funcdecl    go to state 15
    expression  go to state 69


State 42

   23 stmt: expression TSEMI .

    $default  reduce using rule 23 (stmt)


State 43

   30 expression: expression . TPLUS expression
   31           | expression . TMINUS expression
   32           | expression . TMUL expression
   33           | expression . TDIV expression
   34           | expression . TMOD expression
   35           | expression . TPOW expression
   36           | expression . TCEQ expression
   37           | expression . TCNE expression
   38           | expression . TCLT expression
   39           | expression . TCLE expression
   40           | expression . TCGT expression
   41           | expression . TCGE expression
   42           | expression . TOR expression
   43           | expression . TAND expression
   45           | TIDENTIFIER TEQUAL expression .
   46           | expression . TLPAREN calllist TRPAREN
   47           | expression . TLPAREN TRPAREN

    TCEQ     shift, and go to state 27
    TCNE     shift, and go to state 28
    TCLT     shift, and go to state 29
    TCLE     shift, and go to state 30
    TCGT     shift, and go to state 31
    TCGE     shift, and go to state 32
    TAND     shift, and go to state 33
    TOR      shift, and go to state 34
    TLPAREN  shift, and go to state 35
    TPLUS    shift, and go to state 36
    TMINUS   shift, and go to state 37
    TMUL     shift, and go to state 38
    TDIV     shift, and go to state 39
    TMOD     shift, and go to state 40
    TPOW     shift, and go to state 41

    $default  reduce using rule 45 (expression)


State 44

   44 expression: TLPAREN expression TRPAREN .

    $default  reduce using rule 44 (expression)


State 45

    5 ifblock: TIF TLPAREN expression . TRPAREN block
    6        | TIF TLPAREN expression . TRPAREN block elseblock
    7        | TIF TLPAREN expression . TRPAREN block elifblocks elseblock
    8        | TIF TLPAREN expression . TRPAREN block elifblocks
   30 expression: expression . TPLUS expression
   31           | expression . TMINUS expression
   32           | expression . TMUL expression
   33           | expression . TDIV expression
   34           | expression . TMOD expression
   35           | expression . TPOW expression
   36           | expression . TCEQ expression
   37           | expression . TCNE expression
   38           | expression . TCLT expression
   39           | expression . TCLE expression
   40           | expression . TCGT expression
   41           | expression . TCGE expression
   42           | expression . TOR expression
   43           | expression . TAND expression
   46           | expression . TLPAREN calllist TRPAREN
   47           | expression . TLPAREN TRPAREN

    TCEQ     shift, and go to state 27
    TCNE     shift, and go to state 28
    TCLT     shift, and go to state 29
    TCLE     shift, and go to state 30
    TCGT     shift, and go to state 31
    TCGE     shift, and go to state 32
    TAND     shift, and go to state 33
    TOR      shift, and go to state 34
    TLPAREN  shift, and go to state 35
    TRPAREN  shift, and go to state 70
    TPLUS    shift, and go to state 36
    TMINUS   shift, and go to state 37
    TMUL     shift, and go to state 38
    TDIV     shift, and go to state 39
    TMOD     shift, and go to state 40
    TPOW     shift, and go to state 41


State 46

   14 loopblock: TLOOP TLPAREN stmt . stmt expression TRPAREN block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TFLOAT       shift, and go to state 3
    TSTRING      shift, and go to state 4
    TNOT         shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TIF          shift, and go to state 7
    TPRT         shift, and go to state 8
    TLOOP        shift, and go to state 9
    TFUNC        shift, and go to state 10

    ifblock     go to state 13
    loopblock   go to state 14
    funcdecl    go to state 15
    stmt        go to state 71
    expression  go to state 17


State 47

   13 loopblock: TLOOP TLPAREN expression . TRPAREN block
   23 stmt: expression . TSEMI
   30 expression: expression . TPLUS expression
   31           | expression . TMINUS expression
   32           | expression . TMUL expression
   33           | expression . TDIV expression
   34           | expression . TMOD expression
   35           | expression . TPOW expression
   36           | expression . TCEQ expression
   37           | expression . TCNE expression
   38           | expression . TCLT expression
   39           | expression . TCLE expression
   40           | expression . TCGT expression
   41           | expression . TCGE expression
   42           | expression . TOR expression
   43           | expression . TAND expression
   46           | expression . TLPAREN calllist TRPAREN
   47           | expression . TLPAREN TRPAREN
